# Smart-Contracts-Veridion

./: README.md
stellar-passport/: .gitignore
stellar-passport/contracts/stellar-passport/: Cargo.toml
stellar-passport/contracts/stellar-passport/src/: errors.rs  lib.rs  test.rs  types.rs
