[package]
name = "stellar-passport"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "23.0.0-rc.4", default-features = false, features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "23.0.0-rc.4", default-features = false, features = ["testutils", "alloc"] }
